# claude-all-the-way

./: .coverage  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
src/python_project/: main.py
tests/: test_main.py  test_operations.py
